# OpCompass

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CODEBUDDY.md  README.md  pyproject.toml  setup.py
docs/design/: pipeline_simulator_design.md
opcompass/: __init__.py  cli.py  models.py  registry.py  server.py
opcompass/configs/solar_arch/: A100.yaml  B200.yaml  B300.yaml  H100.yaml  H100_PCIe.yaml  Jetson_Thor_T4000.yaml  Jetson_Thor_T5000.yaml
opcompass/engine/: __init__.py  analyzer.py  compute_model.py  memory_model.py  pipeline_model.py  result.py  solar_analyzer.py
opcompass/hardware/: __init__.py  base.py  nvidia_a100.py  nvidia_ampere.py  nvidia_blackwell.py  nvidia_fermi.py  nvidia_h100.py  nvidia_hopper.py  nvidia_kepler.py  nvidia_maxwell.py  nvidia_pascal.py  nvidia_turing.py  nvidia_volta.py
opcompass/operators/: __init__.py  base.py  convolution.py  elementwise.py  flash_attention.py  layernorm.py  matmul.py  reduction.py
solar_handlers_cache/: unknown_op.py  unknown_op_handler.json
tests/: test_cli.py
tests/test_engine/: test_analyzer.py  test_pipeline_model.py
tests/test_hardware/: test_a100.py  test_jetson_thor.py
tests/test_operators/: test_matmul.py
web/: index.html
web/css/: style.css
web/js/: api.js  app.js  charts.js  hardware.js  overview.js  pipeline.js
