[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opcompass"
version = "0.1.0"
description = "SOL (Speed of Light) theoretical peak performance estimator for GPU operators"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "OpCompass Authors"}
]
dependencies = [
    "click>=8.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
]
keywords = ["gpu", "performance", "roofline", "hpc", "deep-learning"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
compass = "opcompass.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["opcompass"]
